--- a/style.css
+++ b/style.css
@@ -9,95 +9,6 @@ body {
 a {
     text-decoration: none;
 }
-
-p {
-    font-size: 1.5em;
-    text-align: justify;
-    padding: 0 10px;
-}
-
-.newspaper-container {
-    width: 700px;
-    margin: 3em auto;
-    padding: 1em;
-    border-radius: 10px;
-    box-sizing: border-box;
-    box-shadow: 5px 5px 15px #ddd;
-    background: white;
-}
-
-.date {
-    font-size: 0.8em;
-}
-header h1 {
-    font-family: 'Abril Fatface', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin: 0;
+body {
     text-align: center;
-    font-size: 2.5em;
-}
-
-#navbar {
-  position: sticky;
-  top: 0;
-  background: rgb(227, 230, 233);
-}
-
-nav {
-    top: 0;
-    padding: 5px 0;
-    margin: 1em 0;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
-    background: white;
-    position: sticky;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-}
-
-nav li {
-    display: inline-block;
-    padding: 0 0.5em;
-}
-
-nav a {
-    font-size: 0.8em;
-    color: #777;
-}
-main h2 {
-    font-family: 'Roboto Slab', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin-bottom: 0;
-}
-
-main h5 {
-    font-family: 'Abril Fatface', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: gray;
-    margin-top: 0.5em;
-}
-
-main img {
-    width: 100%;
-}
-
-.more-articles {
-    border-top: 1px solid #eee;
-    margin-top: 1.5em;
-    text-align: center;
-}
-
-.more-articles section {
-    display: inline-block;
-    width: 44%;
-    margin: 0 1em;
-}
-
-.more-articles img {
-    width: 100%;
-}
-
-.more-articles h4 {
-    font-family: 'Roboto Slab', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-align: left;
 }
